2016-05-09  Charlie Zender  <zender@uci.edu>

	* Shorten unique name suffix in ncremap

	* NCO 4.6.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0 final changes';git push
	git tag -a 4.6.0 -m 'Version 4.6.0 new features: ncclimo, ncap2	vlists, climatology bounds, terraref, ncpdq fixes';git push --tags

	* Add -V var_rgr option to ncremap to invoke --rgr_var=var_rgr for CF grid inferral and remapping

2016-05-06  Charlie Zender  <zender@uci.edu>

	* Pedro committed ncpdq patches that fix vexing longstanding problems permuting in group hierarchies

2016-05-05  Henry Butowsky  <henryb@hush.com>

	* Add space ' ' to allowed chars in a quoted var or att which can be:
	  VAR_NM_QT: (LPHDGT|'-'|'+'|'.'|'('|')'|':'|' ' )+  ;
	  Full NetCDF specification for ID includes UTf8 characters - save that for another day

2016-05-04  Charlie Zender  <zender@uci.edu>

	* Fix nces tabs regression test

2016-05-03  Charlie Zender  <zender@uci.edu>

	* Successfully used CF-coordinate method in both nco_rgr_map() and nco_grd_nfr() when triggered by --rgr_var option

	* Improve and simplify nco_grd_nfr() logic for grid determination, introduce and respect lon_dmn and lat_dmn options for dimension names

	* Inferring grids from CF "coordinates" attribute works, now remapping needs same logic...

	* Check units of coordinate variables

	* Add stubs to check CF "coordinates" attribute to infer grid

2016-05-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta05 final changes';git push
	git tag -a 4.6.0-beta05 -m 'Version 4.6.0-beta05 new features: ncclimo/ncremap rgr, netCDF4 grids, upk MOD13, SLURM_NODELIST';git push --tags

	* ncpdq: initialize REDEFINED_RECORD_DIMENSION=False only once, before variable loop (bug caught by Pedro)

	* ncpdq: change "break;" to "continue;" (bug caught by Pedro)

	* Fix non-interactive batch mode on SLURM to expand SLURM_NODELIST and store as file like PBS and Cobalt
